--- a/requirements.txt
+++ b/requirements.txt
@@ -1,22 +1,10 @@
-appdirs==1.4.3
-certifi==2020.6.20
-click==7.1.2
-distlib==0.3.0
-Flask==1.1.2
-Flask_Cors==3.0.8
-gunicorn==20.0.4
-itsdangerous==1.1.0
-Jinja2==2.11.2
-joblib==0.15.1
-MarkupSafe==1.1.1
-numpy==1.18.1
+cython==0.29.24
+pickle-mixin==1.0.2
+pickleshare==0.7.5
+Flask==2.0.1
+Flask-PyMongo==2.3.0
+Flask-SQLAlchemy==2.5.1
+gunicorn==20.1.0
+numpy==1.17.4
 pandas==1.3.4
-python-dateutil==2.8.1
-pytz==2019.3
-scikit-learn==0.22.1
-scipy==1.7.3
-six==1.14.0
-xgboost==1.1.1
-virtualenv==20.0.7
-Werkzeug==1.0.1
-wincertstore==0.2
+scikit-learn==0.24.2
